# hledger-args

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: README.md
docs/examples/: data.journal
hledger_args/: __init__.py  __main__.py  base_args.py  batch_args.py  cli.py  inter_args.py  lib.py  options.py  output_result.py
