[tool.isort]
profile = "black"

[tool.pyright]
venvPath = "venv"
venv = "."
verboseOutput = false
reportConstantRedefinition = "warning"
reportUnnecessaryComparison = "warning"
reportAssertAlwaysTrue = "warning"
reportUnusedExpression = false

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[metadata]
description = "Replacement for hledger command file with interactive mode and placeholder replacement"
keyword = ["hledger","PTA", "investments", "accounting"]
classifiers = [""]
author = "Eduardo"
author_email = "edkedk99@hotmail.com"

[project]
name = "hledger_args"
version = "0.0.2"
readme= "docs/README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
dependencies = [
	     "click",
	     "rich_click",
	     "questionary"
]

[project.urls]
homepage = "https://github.com/edkedk99/hledger-args"
documentation = "https://edkedk99.github.io/hledger-args/"
repository = "https://github.com/edkedk99/hledger-args"
# changelog = ""

[project.scripts]
hledger-args = "hledger_args.__main__:main"
